Fixed a small issue with the h1 element in the typed animation where the wording would cause the page to jump on mobile due to DIV width and the text being too long to fit inside the DIV without pushing to a new line.

--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@
     width: 250px;
     height: 100px;
     display: inline-block;
+    padding-bottom: 10%;
   }
 
   #slide-in {
@@ -351,6 +352,13 @@
 }
 
 @media only screen and (max-width: 400px) {
+  h1,
+  h2 {
+
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
   .about-container {
     width: 100%;
     height: auto;
